antex-rs/tui/src/bottom_pane/request_user_input/snapshots/antex_tui__bottom_pane__request_user_input__tests__request_user_input_freeform_remapped_submit.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                                        
  Question 1/1 (1 unanswered)                                                                                           
  Share details.                                                                                                        
                                                                                                                        
   ┃ Type your answer (optional)                                                                                        
   ┃                                                                                                                    
   ┃                                                                                                                    
                                                                                                                        
  ctrl + j to submit answer | esc to interrupt
